--- a/views/index.slim
+++ b/views/index.slim
@@ -4,6 +4,7 @@ html
     title mamorio gateway
     meta name="keywords" content="template language"
     meta name="author" content="otoshimono"
+    script src="/js/app.js"
   body
     h1 GATEWAY
     div id="footer"
