--- a/views/index.slim
+++ b/views/index.slim
@@ -5,7 +5,52 @@ html
     meta name="keywords" content="template language"
     meta name="author" content="otoshimono"
     script src="/js/app.js"
+    link href="css/bootstrap.css" rel="stylesheet"
+    link href="css/bootstrap=responsive.css" rel="stylesheet"
   body
-    h1 GATEWAY
+    #contents
+    h1 Mamorio Gateway
+    table class=""
+      tr
+        td
+          p device_id:
+        td
+          select
+            option value="volvo"123456
+            option value="saab"23456
+            option value="mercedes"34567
+            option value="audi"45678
+    table class="table table-striped"
+      tr
+        td device_id
+        td mamorio_major
+        td mamorio_minor
+        td rssi
+      tr
+        td 1234567
+        td 999999
+        td 12345
+        td 23
+
+      tr
+        td 1234567
+        td 999999
+        td 12345
+        td 23
+
+      tr
+        td 1234567
+        td 999999
+        td 12345
+        td 23
+
+
+      tr
+        td 1234567
+        td 999999
+        td 12345
+        td 23
+    br
+
     div id="footer"
-      | Copyright &copy; 2015 YusukeAbe
+      | Copyright &copy; 2015 Othoshimono.inc
