Fix bootstrap path

--- a/views/index.slim
+++ b/views/index.slim
@@ -6,7 +6,7 @@ html
     meta name="author" content="otoshimono"
     script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"
     script src="/js/app.js"
-    link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.css" rel="stylesheet"
+    link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet"
   body
     #contents
       h1 Mamorio Gateway
