append logs to the table

--- a/views/index.slim
+++ b/views/index.slim
@@ -19,36 +19,14 @@ html
             option value="saab"23456
             option value="mercedes"34567
             option value="audi"45678
-      table class="table table-striped"
+      table#logs.table.table-striped
         tr
-          td device_id
-          td mamorio_major
-          td mamorio_minor
-          td rssi
-        tr
-          td 1234567
-          td 999999
-          td 12345
-          td 23
-
-        tr
-          td 1234567
-          td 999999
-          td 12345
-          td 23
-
-        tr
-          td 1234567
-          td 999999
-          td 12345
-          td 23
-
-
-        tr
-          td 1234567
-          td 999999
-          td 12345
-          td 23
+          th device_id
+          th beacon_proximity_uuid
+          th beacon_major
+          th beacon_minor
+          th beacon_accuracy
+          th beacon_rssi
       br
 
       #footer
