add filter feature

--- a/views/index.slim
+++ b/views/index.slim
@@ -14,11 +14,10 @@ html
       form class="form-inline"
         div class="form-group"
           label for="exampleInputName2"device_id:
-          select
-            option value="volvo"123456
-            option value="saab"23456
-            option value="mercedes"34567
-            option value="audi"45678
+          select#device
+            option selected="selected" value="" 未選択
+            option value="01K5H" 01K5H
+            option value="01PJJ" 01PJJ
       table#logs.table.table-striped
         tr
           th device_id
